--- a/src/pages/personal/style/mySet.scss
+++ b/src/pages/personal/style/mySet.scss
@@ -52,7 +52,7 @@
         margin-bottom: 40px;
         .lab{
             display: inline-block;
-            width: 80px;
+            min-width: 80px;
             line-height: 40px;
         }
         .radioGroup{
